--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #============ 数据库配置#======================================
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
-spring.datasource.url =jdbc:mysql://rm-m5et973u893nl0rh4.mysql.rds.aliyuncs.com:3306/zdd_risk_test?useSSL=false&useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&zeroDateTimeBehavior=convertToNull
-spring.datasource.username =zdd_risk_test
-spring.datasource.password =OxX5X8vmPdaqoYhz
+spring.datasource.url =jdbc:mysql://rm-m5et973u893nl0rh4.mysql.rds.aliyuncs.com:3306/zdd_risk?useSSL=false&useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&zeroDateTimeBehavior=convertToNull
+spring.datasource.username =zdd_risk
+spring.datasource.password =xfSPhn9k0ab4UPfG
 
 #============ 加载Mybatis配置文件#======================================
 mybatis.mapper-locations = classpath:mybatis/*Mapper.xml
@@ -26,14 +26,14 @@ logging.level.com.zdd.risk.controller=INFO
 logging.config=classpath:logback-boot.xml
 
 #============ tomcat配置#====================================
-server.port=8084
+server.port=9084
 
 #==============xinyan==============================================
 char.set=UTF-8
-pfx.name=/usr/src/xinyan/8000013189_pri.pfx
-pfx.pwd=217526
-cer.name=bfkey_8000013189.cer
-terminal.id=8000013189
-member.id=8000013189
+pfx.name=/usr/src/xinyan/zdd_pri.pfx
+pfx.pwd=
+cer.name=zdd_pub.cer
+terminal.id=8150721767
+member.id=8150721767
 data.type=json
-radar.url=https://test.xinyan.com/product/radar/v3/report
+radar.url=https://api.xinyan.com/product/radar/v3/report
